feat(dynamock): add comprehensive testing utilities with JSON seeding and consolidated documentation
- Add JSON seeding feature with JSON:API specification support for bulk test data creation
- Implement test data builders with functional options pattern for flexible entity creation
- Add fluent assertion utilities in assert subpackage for test validation
- Create comprehensive integration testing helpers with DynamoDB Local support
- Add mock client with expectation-based testing capabilities
- Consolidate all documentation into single README.md with complete API reference
- Add extensive test coverage with unit, integration, and example tests
- Update staticcheck configuration to ignore deprecation warnings
- Enhance query and table operations with improved godoc documentation

--- a/staticcheck.yml
+++ b/staticcheck.yml
@@ -8,6 +8,10 @@ linters:
   enable:
     - staticcheck
 
+linters-settings:
+  staticcheck:
+    checks: ["all", "-SA1019"]
+
 issues:
   include:
     - "all"
